# one-million-sliders

./: .gitignore  Cargo.toml  Readme.md  db_to_img.py  index.html
js/: main.js  main.js.map  main.ts
server/: Cargo.toml
server/src/: comm.rs  main.rs  shared_bitmap.rs
src/: gif.rs  log.rs  main.rs  shared_bitmap.rs
systemd/: one-million-sliders.service  one-million-sliders.socket
www/: index.html
www/js/: main.js  main.js.map  main.ts
