[package]
name = "server"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = { version = "0.7", features = [
    "http2",
    "macros",
    "tracing",
    "tower-log",
] }
base64 = "0.22.1"
memmap2 = "0.9.4"
futures = "0.3.30"
serde = { version = "1.0", features = ["derive"] }
tokio = { version = "1", features = ["rt-multi-thread", "macros", "signal"] }
tokio-stream = { version = "0.1.15", features = ["sync"] }
itoa = "1.0"
listenfd = "1.0"
tracing = { version = "0.1.40" }
tracing-subscriber = { version = "0.3.18", features = ["env-filter", "fmt"] }
tower = { version = "0.4.13" }
tower-http = { version = "0.5.2", features = [
    "cors",
    "fs",
    "compression-gzip",
    "compression-br",
    "trace",
] }

[profile.release]
opt-level = 3     # Maximum optimization
lto = true        # Enable Link Time Optimization
codegen-units = 1 # Reduce parallel code generation units to increase optimization
